# pelikan

./: .gitignore  CMakeLists.txt  Cargo.toml
src/: CMakeLists.txt
src/core/: context.h
src/core/admin/: admin.c
src/server/: CMakeLists.txt
src/storage/seg/: hashtable.c
