[workspace]
members = [
    "src/rust/common",
    "src/rust/config",
    "src/rust/core/server",
    "src/rust/entrystore",
    "src/rust/logger",
    "src/rust/metrics",
    "src/rust/macros",
    "src/rust/protocol/admin",
    "src/rust/protocol/common",
    "src/rust/protocol/memcache",
    "src/rust/protocol/ping",
    "src/rust/queues",
    "src/rust/server/pingserver",
    "src/rust/server/segcache",
    "src/rust/session",
    "src/rust/storage/seg",
    "src/rust/storage/types",

]
exclude=[    
    "deps/ccommon/rust/ccommon-array",
    "deps/ccommon/rust/ccommon-backend",
    "deps/ccommon/rust/ccommon-buffer",
    "deps/ccommon/rust/ccommon-channel",
    "deps/ccommon/rust/ccommon-derive",
    "deps/ccommon/rust/ccommon-log",
    "deps/ccommon/rust/ccommon-rs",
    "deps/ccommon/rust/ccommon-stats",
    "deps/ccommon/rust/ccommon-stream",
    "deps/ccommon/rust/ccommon-sys",]
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
